--- a/cs/csprincipal.html
+++ b/cs/csprincipal.html
@@ -8,38 +8,40 @@
     <title>Counter-Strike</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">E-sports</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="pgPrincipal.html">Início</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="sobremim.html">Sobre Mim</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="formação.html">Formação</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="atuaçãoprof.html">Atuação Profissional</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contato.html">Contato</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="portfólio.html">Portfólio</a>
-                </li>
-              </ul>
-            </ul>
-          </div>
+  <nav class="navbar bg-body-tertiary fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">._.</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">...</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-      </nav>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Página Principal</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./cstimesbr.html">Times Brasileiros</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Campeonatos
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="cslineups.html">Lineups</a></li>
+                <li><a class="dropdown-item" href="cs_onde_assistir.html">Onde assistir?</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>    
 </body>
 </html>
