--- a/index.html
+++ b/index.html
@@ -5,9 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Página Principal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-        
+    <nav class="navbar bg-body-tertiary fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">._.</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">...</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">Página Principal</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="lol_timesbr.html">Times Brasileiros</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Campeonatos
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="lol_lineups.html">Lineups</a></li>
+                  <li><a class="dropdown-item" href="lol_onde_assistir.html">Onde assistir?</a></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div id="carouselExampleCaptions" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./imgs/Valorant_carousel.jpg" class="d-block w-100" alt="Valorant">
+          <div class="carousel-caption d-none d-md-block">
+           <a class="nomejogo" href="valorant/valorant_principal.html"> <h5>Valorant</h5></a>
+            <p>O FPS da Riot Games</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./imgs/csgo_carousel.jpg" class="d-block w-100" alt="Counter-Strike">
+          <div class="carousel-caption d-none d-md-block">
+            <a class="nomejogo" href="cs/csprincipal.html"><h5>Counter-Strike (CS)</h5></a>
+            <p>O FPS da valve</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./imgs/League_of_Legends_carousel.jpg" class="d-block w-100" alt="League of Legends">
+          <div class="carousel-caption d-none d-md-block">
+           <a class="nomejogo" href="lol/lol_principal.html"> <h5>League of Legends (LoL)</h5></a>
+            <p>O Moba da Riot Games</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
