--- a/valorant/valorant_onde_assistir.html
+++ b/valorant/valorant_onde_assistir.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <title>League of Legends</title>
+    <title>Valorant</title>
 </head>
 <body>
   <nav class="navbar bg-body-tertiary fixed-top">
@@ -25,15 +25,15 @@
               <a class="nav-link active" aria-current="page" href="../index.html">Página Principal</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="lol_timesbr.html">Times Brasileiros</a>
+              <a class="nav-link" href="valorant_timesbr.html">Times Brasileiros</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Campeonatos
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="lol_lineups.html">Lineups</a></li>
-                <li><a class="dropdown-item" href="lol_onde_assistir.html">Onde assistir?</a></li>
+                <li><a class="dropdown-item" href="valorant_lineups.html">Lineups</a></li>
+                <li><a class="dropdown-item" href="#">Onde assistir?</a></li>
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
               </ul>
             </li>
