lineups, index e mais algumas coisas

--- a/index.html
+++ b/index.html
@@ -80,6 +80,40 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+    <br>
+    <br>
+    <div class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading fw-normal lh-1">Counter-Strike Global Offensive</h2>
+        <p class="lead">CS:GO foi desenvolvido pela Valve Corporation como uma sequência do popular mod Counter-Strike para Half-Life. A Valve adquiriu os direitos da franquia e trabalhou com a Hidden Path Entertainment no desenvolvimento. O jogo foi criado com base no feedback da comunidade de jogadores e profissionais de eSports. Ele apresenta modos de jogo clássicos, como "Competitivo" e "Casual", juntamente com novos modos e uma variedade de mapas e armas. A jogabilidade é focada em estratégia e trabalho em equipe, com um sistema de economia. CS:GO se tornou um dos jogos de tiro mais populares do mundo, sendo um pilar dos eSports e continuando a receber suporte da Valve.</p>
+      </div>
+      <div class="col-md-5">
+       <img src="./imgs/csgo_desc.jpg" height="500px" width="700px"> 
+      </div>
+    </div>
+<hr>
+<br>
+    <div class="row featurette">
+      <div class="col-md-7 order-md-2">
+        <h2 class="featurette-heading fw-normal lh-1">Valorant</h2>
+        <p class="lead">Valorant é um jogo de tiro tático em primeira pessoa desenvolvido pela Riot Games. Os jogadores participam de partidas 5v5 e escolhem entre uma variedade de agentes com habilidades únicas. O objetivo é plantar/desarmar uma bomba ou eliminar a equipe adversária. O jogo enfatiza a estratégia, a comunicação e o trabalho em equipe. A Riot Games implementou medidas de segurança para evitar trapaças e o jogo tem uma presença forte nos eSports. Valorant continua a receber atualizações e suporte da desenvolvedora.</p>
+      </div>
+      <div class="col-md-5 order-md-1">
+      <img src="./imgs/valorant descricao.jpg " height="500px" width="700px">  
+      </div>
+    </div>
+    <hr>
+<br>
+<div class="row featurette">
+  <div class="col-md-7">
+    <h2 class="featurette-heading fw-normal lh-1">League of Legends</h2>
+    <p class="lead">League of Legends (LoL) é um jogo de estratégia em equipe desenvolvido pela Riot Games. Os jogadores formam equipes de campeões únicos e competem para destruir o Nexus inimigo. Com elementos de estratégia em tempo real, trabalho em equipe e habilidades individuais, o LoL atrai uma grande base de jogadores. A Riot Games oferece suporte contínuo com atualizações regulares e promove uma cena competitiva global com torneios emocionantes, incluindo o Campeonato Mundial. Com uma comunidade dedicada e integridade competitiva, o LoL é um dos jogos mais populares e influentes nos eSports.</p>
+  </div>
+  <div class="col-md-5">
+   <img src="./imgs/League_of_Legends_desc.jpg" height="500px" width="700px"> 
+  </div>
+</div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
