--- a/valorant/valorant_lineups.html
+++ b/valorant/valorant_lineups.html
@@ -47,7 +47,7 @@
         <style>
         .table {
             margin-top:  5%; 
-        border-style: dashed; color: black;
+        border-style: dashed; color: green;
     }
     </style>
         <thead>
@@ -90,7 +90,88 @@
             <td>Omen, Harbor, Astra</td>
           </tr>
 
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Jogador</th>
+            <th scope="col">Organização</th>
+            <th scope="col">KDA</th>
+            <th scope="col">Principais Agentes</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">Gabriel 'qck' Lima</th>
+            <td><img src="../imgs/furia-esports-logo.jpg"width="40px" height="40px"></td>
+            <td>1.06</td>
+            <td>Viper, Killjoy, Harbor</td>
+          </tr>
+          <tr>
+            <th scope="row">Khalil 'Khalil' Schmidt</th>
+            <td><img src="../imgs/furia-esports-logo.jpg"width="40px" height="40px"></td>
+            <td>1.06</td>
+            <td>Killjoy, Omen, Brimstone</td>
+          </tr>
+          <tr>
+            <th scope="row">Matheus 'mazin' Araújo</th>
+            <td><img src="../imgs/furia-esports-logo.jpg"width="40px" height="40px"></td>
+            <td>1.01</td>
+            <td>Skye, Kay/o, Viper</td>
+          </tr>
+          <tr>
+            <th scope="row">Douglas 'dgzin' Silva</th>
+            <td><img src="../imgs/furia-esports-logo.jpg"width="40px" height="40px"></td>
+            <td>1.19</td>
+            <td>Jett, Neon, Viper</td>
+          </tr>
+          <tr>
+            <th scope="row">Leonardo 'mwzera' Serrati</th>
+            <td><img src="../imgs/furia-esports-logo.jpg"width="40px" height="40px"></td>
+            <td>1.18</td>
+            <td>Skye, Raze, Sova</td>
+          </tr>
         </tbody>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Jogador</th>
+              <th scope="col">Organização</th>
+              <th scope="col">KDA</th>
+              <th scope="col">Principais Agentes</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">João 'jzz' Pedro</th>
+              <td><img src="../imgs/Mibr_logo.jpg"width="40px" height="40px"></td>
+              <td>1.10</td>
+              <td>skye, Raze, Sova</td>
+            </tr>
+            <tr>
+              <th scope="row">Leandro 'frz' Gomes</th>
+              <td><img src="../imgs/Mibr_logo.jpg"width="40px" height="40px"></td>
+              <td>1.20</td>
+              <td>Killjoy, Skye, Breach</td>
+            </tr>
+            <tr>
+              <th scope="row">Murillo 'murizzz' Tuchtenhagen</th>
+              <td><img src="../imgs/Mibr_logo.jpg"width="40px" height="40px"></td>
+              <td>1.01</td>
+              <td>Viper, Kay/o, Skye </td>
+            </tr>
+            <tr>
+              <th scope="row">Mateus 'RgLM' Rodigoli </th>
+              <td><img src="../imgs/Mibr_logo.jpg"width="40px" height="40px"></td>
+              <td>1.11</td>
+              <td>Harbor, Omen, Astra </td>
+            </tr>
+            <tr>
+              <th scope="row">André 'Txozin' Saidel </th>
+              <td><img src="../imgs/Mibr_logo.jpg"width="40px" height="40px"></td>
+              <td>0.97</td>
+              <td>Killjoy, Omen </td>
+            </tr>
+          </tbody>
       </table>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>    
 </body>
