fim do projeto (eu acho)

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                   Campeonatos
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="lol_lineups.html">Lineups</a></li>
-                  <li><a class="dropdown-item" href="lol_onde_assistir.html">Onde assistir?</a></li>
+                  <li><a class="dropdown-item" href="#">Lineups</a></li>
+                  <li><a class="dropdown-item" href="#">Onde assistir?</a></li>
                 </ul>
               </li>
             </ul>
@@ -90,6 +90,74 @@
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">Counter-Strike Global Offensive</h2>
         <p class="lead">CS:GO foi desenvolvido pela Valve Corporation como uma sequência do popular mod Counter-Strike para Half-Life. A Valve adquiriu os direitos da franquia e trabalhou com a Hidden Path Entertainment no desenvolvimento. O jogo foi criado com base no feedback da comunidade de jogadores e profissionais de eSports. Ele apresenta modos de jogo clássicos, como "Competitivo" e "Casual", juntamente com novos modos e uma variedade de mapas e armas. A jogabilidade é focada em estratégia e trabalho em equipe, com um sistema de economia. CS:GO se tornou um dos jogos de tiro mais populares do mundo, sendo um pilar dos eSports e continuando a receber suporte da Valve.</p>
+        <p class="lead">
+          Sobre o cenario de cs no brasil temos que falar sobre o fallen e por que fallen é tão importante para o cenário
+          brasileiro?
+  
+          Antes mesmo do cenário competitivo de Counter Strike: Global Offensive (CS:GO) florescer no Brasil, tivemos
+          outras versões do jogo de tiro da Valve que fizeram sucesso dentre competições de esportes eletrônicos (eSports)
+          e Gabriel “FalleN” Toledo estava lá desde o começo.
+  
+          Na época, pouco se falava de jogar como uma profissão real. Na verdade, o ato de jogar não era considerado algo
+          muito positivo ainda por conta de ser visto muito mais como apenas uma forma de entretenimento; principalmente
+          entre os jovens que passavam horas em lan houses ou até em casa jogando jogos em internet discada.
+  
+          Muitos conhecem FalleN Toledo, que é considerado uma lenda para a comunidade, porém, nem todo mundo conhece a
+          história do pro player e entende o real motivo de FalleN ser uma personalidade extremamente importante para
+          desenvolvimento da modalidade em solo brasileiro.
+  
+          Saiba os principais feitos do verdadeiro segundo a Betway e relembre que o cenário só existe atualmente como o
+          conhecemos, graças ao empenho e paixão do itarareense por um dos jogos mais emblemáticos dos eSports.
+  
+          Talvez nem nos sonhos mais impensáveis Gabriel tenha imaginado que chegaria onde está atualmente.
+  
+          O pro player é considerado um dos maiores nomes do cenário, foi selecionado pela Forbes como uma das
+          personalidades mais eloquentes do mundo, ganhou dois Majors – campeonatos mais importantes da modalidade – e
+          agora reuniu os melhores jogadores profissionais brasileiros de CS:GO para vestirem a camisa do “The Last
+          Dance”, projeto liderado por FalleN e financiado pela Imperial eSports.
+  
+          Nascido em Itararé – uma cidade do interior de São Paulo que possui cerca de 50 mil habitantes – o pequeno
+          Gabriel cresceu entre computadores e tecnologia.
+  
+          A infância pode ter sido reflexo da vida adulta, isso por conta de sua família ter uma loja de informática, o
+          que pode ter ajudado a florescer o interesse do garoto em jogos de computador.
+  
+          O amor pelo CS foi uma descoberta de FalleN aos 12 anos de idade, ou seja, muito antes de pensar que somaria
+          mais de R $5,9 milhões de reais em premiações na modalidade. Foi aí que uma brincadeira de criança virou a
+          história de uma geração de fãs apaixonados.
+  
+          Entrada no competitivo
+  
+          A primeira versão do game que era um mod de Half-Life e ainda nem pertencia à Valve, foi inicialmente anunciado
+          em 1999. FalleN começou a jogar o jogo de tiro profissionalmente em meados de 2005, pouco depois do lançamento
+          do lendário Counter Strike 1.6, lançado em 2003 e pertencente à desenvolvedora norte-americana.
+  
+          Foram quase cinco anos se dedicando ao jogo até conseguir uma posição oficial de pro player, em que o jovem
+          itarareense finalmente começou a se destacar entre outros jogadores de CS.
+  
+          É importante lembrar que em 2005 não existiam campeonato igual temos hoje na modalidade, as oportunidades de
+          brilhar dentre outros pro players era muito menor do que atualmente, visto que, na época, jogar nem era
+          considerado uma profissão e muito menos era visto com bons olhos.
+  
+          Mesmo assim, FalleN chegou a competir no World Cyber Games (WCG), um dos eventos internacionais precursores dos
+          eSports, responsável por mostrar ao mundo como as competições de videogame poderiam ser gigantes.
+  
+          Primeiros contatos com o competitivo
+  
+          O pro player tem vivido algumas etapas da famosa jornada do herói desde o começo de sua carreira. Foi chamado
+          para a aventura ainda jovem e iniciou a trilhar seu caminho na modalidade, tendo oportunidade de jogar com
+          Lincoln “fnx” Lau logo nos primeiros anos jogando profissionalmente. Mesmo após tantos anos, fnx ainda é próximo
+          de FalleN e integra o elenco do “The Last Lance“.
+  
+          Nestes 15 anos jogando profissionalmente, o verdadeiro competiu no Counter-Strike 1.6, Counter-Strike: Source e
+          no CS:GO, tendo passado por todas as fases da franquia e acompanhando a evolução do jogo durante todo este
+          tempo, passando por equipes consolidadas, tais como CompLexity Gaming, semXorah, KaBuM! e-Sports, Keyd Stars,
+          Luminosity Gaming, SK Gaming, Yeah!, SK Gaming, MIBR e Team Liquid.
+  
+          Nem todo esse tempo foi marcado por headshots certeiros, assim como viu o cenário crescer, também fez parte da
+          época em que o CS não estava em alta, tendo que se obrigar a competir em outros jogos para conseguir juntar
+          dinheiro para investir no CS e viver do sonho de ser jogador profissional. Foi aí que ele e Fernando “fer”
+          Alvarenga se aventuraram no competitivo de CrossFire.
       </div>
       <div class="col-md-5">
        <img src="./imgs/csgo_desc.jpg" height="500px" width="700px"> 
